# capstone-instagram

./: LICENSE  README.md  manage.py  pyproject.toml
authentication/: forms.py  urls.py  views.py
capstone_config/: asgi.py  settings.py  urls.py  wsgi.py
comments/: admin.py  forms.py  models.py  urls.py
comments/migrations/: 0001_initial.py  0002_auto_20201016_2319.py  0002_auto_20201017_0357.py  0002_auto_20201017_1453.py  0002_auto_20201018_0111.py  0002_auto_20201018_0146.py  0002_auto_20201018_0209.py  0002_auto_20201018_1927.py  0002_auto_20201018_1944.py  0002_auto_20201019_0314.py  0002_auto_20201019_0325.py  0002_auto_20201020_1601.py  0002_auto_20201021_0439.py  0002_commentmodel_author.py  0003_auto_20201017_0238.py  0004_auto_20201017_0239.py
instagram/: admin.py  forms.py  models.py  urls.py  views.py
instagram/migrations/: 0001_initial.py  0002_auto_20201007_2341.py  0002_instaprofilemodel_url.py
instapost/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
instapost/migrations/: 0001_initial.py  0002_auto_20201006_2012.py  0002_auto_20201014_2112.py  0002_auto_20201016_2032.py  0002_auto_20201016_2319.py  0002_auto_20201017_0357.py  0002_postmodel_liked.py  (+14 more)
notification/: admin.py  models.py  urls.py  views.py
photogram/: admin.py  forms.py  models.py  urls.py  views.py
static/: base.css  bootstrap.css  login.css  signup.css  style.css
templates/: 404.html  500.html  acitive_users.html  add_post.html  base.html  edit_profile.html  generic.html  index.html  login.html  notification.html  post_detail.html  profile.html  signup.html
(+8 files in other folders)
