[tool.poetry]
name = "capstone"
version = "0.1.0"
description = "Final Capstone for Q4 Kenzie Group Garnet"
authors = ["Kathryn Anderson, Reggy Tjitradi, Chris McAfee, Albina Tileubergen-Thomas"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
Pillow = "^7.2.0"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
